test/classes/errors/nilability-init-var/init-var-nonnil-unmanaged-from-oknil-shared.good
init-var-nonnil-unmanaged-from-oknil-shared.chpl:9: error: cannot assign to non-nilable unmanaged MyClass from nilable shared MyClass?
